[package]
name = "alpaka"
version = "0.1.0"
license = "MIT"
authors = ["tehAnswer <sergiorodriguezgijon@gmail.com>"]
edition = "2018"
description = "API client of alpaca.news"
repository = "https://github.com/tehAnswer/alpaka"
readme = "README.md"

[dependencies]
surf = "2.0.0-alpha.2"
async-std = "1.5.0"
serde = "1.0.110"
serde_json = "1.0.53"
serde_derive = "1.0.110"
mockito = "0.25.1"
